--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   color: #fff;
   background-color: #242424;
+  padding: 0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,12 +13,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+body, .App {
   margin: 0;
-}
-
-.app-container{
-  padding: 2.5%;
+  padding: 0;
 }
 
 #root {
