--- a/src/scenes/Admin/index.css
+++ b/src/scenes/Admin/index.css
@@ -41,3 +41,29 @@
     color: red;
     margin: 5px;
 }
+
+/*Storage Stylish*/
+.storage {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+    width: 100%;
+}
+
+.storage p, .list-button {
+    font-size: 15px;
+}
+
+.storage .list-item {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.227) ;
+}
+
+.storage .list-button {
+    height: auto;
+    min-width: 100px;
+}
