capitalize the text

--- a/src/scenes/Admin/index.css
+++ b/src/scenes/Admin/index.css
@@ -56,6 +56,7 @@
 }
 
 .storage .list-item {
+    text-transform: capitalize;
     display: flex;
     justify-content: space-between;
     width: 100%;
